<resources>
    <string name="app_name">GreenTips</string>
    <string name="chooseLang">Choose a language</string>
    <string name="espanol">Español</string>
    <string name="svenska">Svenska</string>
    <string name="polsku">Polski</string>
    <string name="shqip">Shqip</string>
    <string name="english">English</string>
    <string name="francais">Français</string>
    <string name="continueButton">Continue</string>
    <string name="aboutButton">About</string>
    <string name="help">Help</string>
    <string name="chooseCat">Choose a category</string>
    <string name="category">Category</string>
    <string name="aboutapp">
        <b>Welcome to GreenTips!</b>\n
        \nThis application was developed by 6 students at Chalmers Tekniska Högskola in Gothenburg, Sweden.\n
        \nWith the tips and ideas we give to you here, we will help you to reduce you environmental impact and live a healthier life!\n
        \nSimply choose the category you are interested in and we will supply many, simple ways for a greener life.
        \nReceive notifications for reminders and strive for achievements by choosing to have a tip in focus!
    </string>
    <string name="helpcontact"><b>Contact a developer:</b>\n\n
        <b>Alexis Tello:</b>\n
        alexis@student.chalmers.se\n\n
        <b>Cezary Januszek:</b>\n
        januszek@student.chalmers.se\n\n
        <b>Endrit Karpuzi:</b>\n
        karpuzi@student.chalmers.se\n\n
        <b>Firel Issa:</b>\n
        firel@student.chalmers.se\n\n
        <b>Mohammed Al-fatlawi:</b>\n
        mohalf@student.chalmers.se\n\n
        <b>Smedra Touma:</b>\n
        smedra@student.chalmers.se
    </string>
    <string name="transport">Transport</string>
    <string name="outdoors">Outdoors</string>
    <string name="worklife">Working life</string>
    <string name="household">Household</string>
    <string name="sociallife">Social life</string>
    <string name="sourcestext1" translatable="false">Sources:</string>
    <string name="txtCredits" translatable="false">
        \n\n https://info.esg.adec-innovations.com/blog/environmentally-friendly-practices-for-the-workplace
        \n\n https://info.esg.adec-innovations.com/blog/environmentally-friendly-practices-for-the-workplace
        \n\n https://www.goodenergy.co.uk/blog/2017/08/22/ultimate-guide-eco-friendly-living/?fbclid=IwAR1NP5ebRs-PlYXbFdD7kD2r9O0OSw0vr4xw6MxpVmKaxr8GQ-FucukQfN4
        \n\n https://backpackerspantry.com/blogs/news/7-tips-for-eco-friendly-outdoor-recreation
        \n\n https://biofriendlyplanet.com/green-ideas/eco-friendly/12-small-changes-to-make-your-home-more-eco-friendly/


    </string>
    <string name="chooseTip">Choose a tip</string>
    <string name="shorttransporttip1">Walk for short trips</string>
    <string name="shorttransporttip2">Opt for the bike</string>
    <string name="shorttransporttip3" translatable="false">Use public transport</string>
    <string name="shorttransporttip4" translatable="false">Plan before taking trips</string>
    <string name="shorttransporttip5" translatable="false">Switch to Green driving</string>
    <string name="shorttransporttip6" translatable="false">Take one car</string>
    <string name="shorttransporttip7" translatable="false">Save your money</string>
    <string name="transporttip1">Walk for short trips.
        \n\nWalking helps reduce body fat, lower blood pressure and is free.
        It may also take less time than you think.

        \n\nStudies have shown that most people will underestimate time related to car
        journeys and overestimate the time it will take to walk.
        \n\nThe average walking pace is six kilometres per hour and
        if you walk you don’t need to find a car bay when you arrive.</string>
    <string name="transporttip2" translatable="false">
        \n\nOpt for the bike
        \n\nSwitching a 10km journey per week from your car to your bike will burn around 300 calories each way and can save
        over 300kg of greenhouse gas emissions each year.
        \n\nDid you know? Peak hour city trips up to 10km in length are generally faster by bike than any other form of transport,
        door to door.
        \n\nIn addition cycling helps reducing body fat, which is a first step to become healthier and stronger!</string>
    <string name="transporttip3" translatable="false">
        Use public transport
        \n\nUsing public transport allows you to skip the hassle of traffic and parking and still be on time!</string>
    <string name="transporttip4" translatable="false">
        Plan before taking trips
        \n\nCollect your errands in one trip to save fuel, money and time!
        \n\nIt will allow you to become more productive during the rest of the day.</string>
    <string name="transporttip5" translatable="false">
        Switch to Green driving
        \n\nDrive smoothly, starting and stopping uses more fuel.
        \n\nSlow down, driving at 90 km/h uses 25% less fuel than travelling at 110 km/h.
        \n\nRegularly check your tyre pressure. Under-inflated tyres can increase fuel consumption by 3%
        and take 10,000km off the tyres life.
        \n\nInstead of using the air conditioner open the window when driving under 70km/h.</string>
    <string name="transporttip6" translatable="false">
        Take one car
        \n\nInstead of taking several cars to make the same trip with your friends, take a single car.
        \n\nYou will enjoy your trip
        even more and it allows you to switch seats with the driver to make your travel safer and more comfortable.
        \n\nYou can always opt for car-pooling if travelling alone to break the monotony of your daily commute.</string>
    <string name="transporttip7" translatable="false">
        Save your money
        \n\nHaving a car costs a lot nowadays, the fuel is pretty expensive and the congestion tax in Sweden becomes
        more expensive every year so think twice before buying your own car!</string>
    <string name="shorthouseholdtip1" translatable="false">Stop using disposable bags</string>
    <string name="shorthouseholdtip2" translatable="false">Use cold water when washing your clothes</string>
    <string name="shorthouseholdtip3" translatable="false">Make your own cleaning products</string>
    <string name="shorthouseholdtip4" translatable="false">Insulate your home</string>
    <string name="shorthouseholdtip5" translatable="false">Turn off lights when you leave the room</string>
    <string name="shorthouseholdtip6" translatable="false">Eat less meat</string>
    <string name="shorthouseholdtip7" translatable="false">Recycle everything</string>
    <string name="householdtip1" translatable="false">
        \n\nStop using disposable bags

	    \n\nGet some reusable bags—my Or, make your own—they’re insanely easy.



    </string>
    <string name="householdtip2" translatable="false">
        \n\nUse cold water when washing your clothes
	    \n\nHot water will actually set stains, and cold water will get your clothes just as clean.


    </string>
    <string name="householdtip3" translatable="false">
        \n\nMake your own cleaning products
        \n\nReplace all your plastic chemical containers with a single one.
        \n\n*Window cleaner: 1/4 cup of white vinegar, 2 cups of warm water and tea tree oil
        \n\n*Anti-bacterial cleaner: 1/4 cup of white vinegar, 1 tbsp of baking soda, 1 litre of hot water and orange essential oils
    </string>
    <string name="householdtip4" translatable="false">
        \n\nInsulate your home
	    \n\nHomes that aren\'t well insulated are much harder to keep warm when it\'s cold, and cool when the weather is hot.
    </string>
    <string name="householdtip5" translatable="false">
        Turn off lights when you leave the room.</string>
    <string name="householdtip6" translatable="false">
        \n\nEat less meat
	    \n\nNot having red meat, even if it’s just for two or three days a week - can have quite a significant impact on reducing your carbon footprint.
</string>
    <string name="householdtip7" translatable="false">
        \n\nRecycle everything
	    \n\nYou can recycle almost everything, from batteries to paper to cars. Before you throw it away, take a minute to find out if you could recycle it instead.
</string>
    <string name="shortworklifetip1" translatable="false">Recycle!</string>
    <string name="shortworklifetip2" translatable="false">Go paperless!</string>
    <string name="shortworklifetip3" translatable="false">Green cleansing</string>
    <string name="shortworklifetip4" translatable="false">No more water bottles</string>
    <string name="shortworklifetip5" translatable="false">Plan you work day</string>
    <string name="shortworklifetip6" translatable="false">Use public transport</string>
    <string name="shortworklifetip7" translatable="false">Have green decoration</string>
    <string name="worklifetip1" translatable="false">
        \n\nRecycle!

        \n\nA lot of employees don\'t care about recycling, but it does matter recycling during your work. You can recycle
        paper, plastic and food for example.
</string>
    <string name="worklifetip2" translatable="false">
        \n\nGo paperless!

        \n\nSwitch to digital documents instead of paper, and think over of buying 100€ recycled paper.
</string>
    <string name="worklifetip3" translatable="false">
        \n\nGreen cleansing

        \n\nMany cleansing products are environmentally unfriendly and are dangerous for the environment as well as human health.
        \n\nPrioritize buying eco friendly hand soap and sprays that don\'t have harmful and other bad chemicals
</string>
    <string name="worklifetip4" translatable="false">
        \n\nNo more water bottles

        \n\nyou can easily drink water from your own glass, or if you purchase a reusable water bottle
</string>
    <string name="worklifetip5" translatable="false">
        \n\nPlan you work day

        \n\nPrepare your meals and snacks day before you work, so you skip drive to buy food or
        other stuff.
</string>
    <string name="worklifetip6" translatable="false">
        \n\nUse public transport

        \n\nThe best to reduce emissions is  to use public transport, if it\'s not possible to use it so
        take your bike and cycle to work.
</string>
    <string name="shortoutdoorstip1" translatable="false">Be careful what you burn</string>
    <string name="shortoutdoorstip2" translatable="false"> Keep water clean</string>
    <string name="shortoutdoorstip3" translatable="false">Stop buying plastic bags</string>
    <string name="shortoutdoorstip4" translatable="false">Do not throw rubbish on the ground</string>
    <string name="shortoutdoorstip5" translatable="false">Do not smoke in public places</string>
    <string name="shortoutdoorstip6" translatable="false">Stop using hair spray</string>
    <string name="shortoutdoorstip7" translatable="false">Here we give information about the first tip, on click open this slide</string>
    <string name="arabic">العربية.</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="enter_your_e_mail_here">Enter your e-mail here</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="enter_your_subject_here">Enter your subject here</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="switch_view" translatable="false">Switch view</string>
</resources>