<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/greenback"
    tools:context=".ContactForm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="180dp" >


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp"
                android:hint="@string/enter_your_name_here"
                android:autofillHints="" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_form_email"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="14sp"
                android:hint="@string/enter_your_e_mail_here"
                android:autofillHints="" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_form_subject"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp"
                android:hint="@string/enter_your_subject_here"
                android:autofillHints="" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_form_message"
                android:hint="@string/enter_your_message_here"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:height="180dp"
                android:gravity="top"
                android:hint="@string/enter_your_message_here"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                android:autofillHints="" />

            <Button
                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_tip_corner"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="13sp" />

            <Button
                android:id="@+id/homebutton"
                android:alpha="0.8"
                android:background="@drawable/homebutton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:onClick="returnHome"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"/>
        </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>