<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/language_layout"
    android:background="@drawable/greenback"
    tools:context=".choose_lang">

    <TextView
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_marginTop="160dp"
        android:enabled="false"
        android:text="@string/chooseLang"
        android:textColor="#145317"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ScrollView
        android:id="@+id/scrollViewTransport"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scrollLayoutHousehold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/english"
                android:layout_width="138dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:onClick="englishButton"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/english" />

            <Button
                android:id="@+id/swedish"
                android:layout_width="138dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:onClick="swedishButton"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/svenska" />

            <Button
                android:id="@+id/spanish"
                android:layout_width="138dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:onClick="spanishButton"
                android:alpha="0.9"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/espanol" />

            <Button
                android:id="@+id/french"
                android:layout_width="138dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:onClick="frenchButton"
                android:alpha="0.9"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/francais" />

            <Button
                android:id="@+id/arabic"
                android:layout_width="138dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:onClick="arabicButton"
                android:alpha="0.9"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/arabic" />

            <Button
                android:id="@+id/polish"
                android:layout_width="138dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:onClick="polishButton"
                android:alpha="0.9"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/polsku" />

            <Button
                android:id="@+id/albanian"
                android:layout_width="138dp"
                android:layout_marginBottom="10dp"
                android:onClick="albanianButton"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/shqip" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/homebutton"
        android:alpha="0.8"
        android:background="@drawable/homebutton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:onClick="returnHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>