<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transportTips">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="313dp"
        android:layout_height="59dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:enabled="false"
        android:text="@string/chooseTip"
        android:textAlignment="center"
        android:textColor="#1E8806"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="313dp"
        android:layout_height="59dp"
        android:layout_marginStart="48dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/transport"
        android:textAlignment="center"

        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <!-- android:textSize="40sp"/> -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="000dp">

    <Button
        android:id="@+id/switchviewtoslide"
        android:onClick="switchView"
        android:alpha="1.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_view" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollViewTransport"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:id="@+id/scrollLayoutHousehold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="370dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/transporttip1"
                android:onClick="goToTransportSlide"
                android:layout_width="350dp"
                android:layout_height="150dp"

                android:textAllCaps="false"
                android:text="@string/shorttransporttip1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"/>

            <Button
                android:id="@+id/transporttip2"
                android:onClick="goToTransportSlide"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"

                android:textAllCaps="false"
                android:text="@string/shorttransporttip2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner" />
            <!-- android:onClick="goToTransportSlide"-->


            <Button
                android:id="@+id/transporttip3"
                android:onClick="goToTransportSlide"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"

                android:textAllCaps="false"
                android:text="@string/shorttransporttip3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner" />


            <Button
                android:id="@+id/transporttip4"
                android:onClick="goToTransportSlide"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"

                android:textAllCaps="false"
                android:text="@string/shorttransporttip4"
                android:textSize="16sp"
                android:textStyle="bold"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner" />


            <Button
                android:id="@+id/transporttip5"
                android:onClick="goToTransportSlide"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"

                android:textAllCaps="false"
                android:text="@string/shorttransporttip5"
                android:textSize="16sp"
                android:textStyle="bold"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner" />



            <Button
                android:id="@+id/transporttip6"
                android:onClick="goToTransportSlide"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"

                android:textAllCaps="false"
                android:text="@string/shorttransporttip6"
                android:textSize="16sp"
                android:textStyle="bold"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner" />



            <Button
                android:id="@+id/transporttip7"
                android:onClick="goToTransportSlide"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"

                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"

                android:textAllCaps="false"
                android:text="@string/shorttransporttip7"
                android:textSize="16sp"
                android:textStyle="bold"
                />



        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/homebutton"
        android:alpha="0.8"
        android:background="@drawable/homebutton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:onClick="returnHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>