<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenback"
    tools:context=".outdoorsTips">

    <include layout = "@layout/base_activity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:enabled="false"
        android:text="@string/outdoors"
        android:textColor="#145317"
        android:textAlignment="center"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="000dp">

        <Button
            android:id="@+id/switchviewtoslide"
            android:onClick="switchView"
            android:alpha="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch view" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollViewOutdoors"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scrollLayoutHousehold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="370dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/outdoorstip1"
                android:onClick="goToOutdoorsSlide"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:textAllCaps="false"
                android:text="@string/shortoutdoorstip1" />

            <Button
                android:id="@+id/outdoorstip2"
                android:onClick="goToOutdoorsSlide"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/shortoutdoorstip2" />

            <Button
                android:id="@+id/outdoorstip3"
                android:onClick="goToOutdoorsSlide"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/shortoutdoorstip3" />

            <Button
                android:id="@+id/outdoorstip4"
                android:onClick="goToOutdoorsSlide"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/shortoutdoorstip4" />

            <Button
                android:id="@+id/outdoorstip5"
                android:onClick="goToOutdoorsSlide"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/shortoutdoorstip5" />

            <Button
                android:id="@+id/outdoorstip6"
                android:onClick="goToOutdoorsSlide"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/shortoutdoorstip6" />

            <Button
                android:id="@+id/outdoorstip7"
                android:onClick="goToOutdoorsSlide"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:textAllCaps="false"
                android:text="@string/shortoutdoorstip7" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/homebutton"
        android:alpha="0.8"
        android:background="@drawable/homebutton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:onClick="returnHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>